--- a/manifest.json
+++ b/manifest.json
@@ -10,12 +10,12 @@
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "run_at": "document_end",
-    "js": ["www/js/contentscript.js"]
+    "js": ["www/js/main.js"]
   }],
-  "web_accessible_resources": ["www/js/script.js"],
+  "web_accessible_resources": ["www/js/browse-less.js"],
   "icons": { 
-    "16": "www/img/icons/icon16.png", 
-    "48": "www/img/icons/icon48.png", 
+    "16": "www/img/icons/icon16.png",
+    "48": "www/img/icons/icon48.png",
     "128": "www/img/icons/icon128.png"
   },
   "permissions": [
