--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "run_at": "document_end",
-    "js": ["www/js/main.js"]
+    "js": ["www/js/main.js"],
+    "css": ["www/css/browse-less.css"]
   }],
   "web_accessible_resources": ["www/js/browse-less.js"],
   "icons": { 
