--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
   "name": "Browse Less",
   "description": "Break your browsing habit one scroll at a time.",
-  "version": "0.1",
+  "version": "0.2",
   "manifest_version": 2,
   "browser_action": {
     "default_popup": "www/popup.html",
     "default_title": "Browse Less"
   },
   "content_scripts": [{
-    "matches": ["<all_urls>"],
+    "matches": ["http://*/*", "https://*/*"],
     "run_at": "document_end",
     "js": ["www/js/main.js"],
     "css": ["www/css/browse-less.css"]
