Update connection between scripts

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Browse Less",
   "description": "Break your browsing habit one scroll at a time.",
-  "version": "0.4",
+  "version": "0.5",
   "action": {
     "default_popup": "www/popup.html",
     "default_title": "Browse Less"
@@ -10,12 +10,7 @@
   "content_scripts": [{
     "matches": ["http://*/*", "https://*/*"],
     "run_at": "document_end",
-    "js": ["www/js/main.js"],
-    "css": ["www/css/browse-less.css"]
-  }],
-  "web_accessible_resources": [{ 
-    "resources": ["www/js/browse-less.js"],
-    "matches": ["<all_urls>"]
+    "js": ["www/js/main.js"]
   }],
   "icons": { 
     "16": "www/img/icons/icon16.png",
