--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Browse Less",
-  "description": "Break your browsing habit one scroll at a time.",
+  "description": "The more you scroll, the more faded the page becomes. Break your browsing habit one scroll at a time.",
   "version": "0.6",
   "action": {
     "default_popup": "www/popup.html",
