--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "browse-less",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Browse Less",
   "devDependencies": {
     "gulp": "^4.0.2",
@@ -9,5 +9,8 @@
   "engines": {
     "node": ">= 10.16.0",
     "npm": ">= 6.10.0"
+  },
+  "scripts": {
+    "build": "node gulp-build.js && node gulp-dist.js"
   }
 }
